pgadmin/pgadmin_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  selector:
    matchLabels:
      frontend: pgadmin
  template:
    metadata:
      labels:
        frontend: pgadmin
    spec:
      securityContext:
        fsGroup: 5050
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:7.8
        imagePullPolicy: IfNotPresent
        ports:
        - name: pgadmin-port
          containerPort: 80
